Creating show method for branch
